[package]
name = "trusty_editor"
version = "0.1.0"
authors = ["BookOwl <stanleybookowl@gmail.com>"]
license = "MIT"

[dependencies]
trusty_backend  = { git = "https://github.com/trusty-editor/backend" }
trusty_frontend = { git = "https://github.com/trusty-editor/frontend" }
trusty_utils    = { git = "https://github.com/trusty-editor/utils" }

